# news-flash

./: .buildconfig  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  dnd_tree.json  meson.build  meson_options.txt  rustfmt.toml
.gitlab/issue_templates/: bug.md  feature.md
.gitlab/merge_request_templates/: bug.md
build-aux/: cargo.sh  com.gitlab.newsflash.json  meson_post_install.py  vendor.sh
data/: com.gitlab.newsflash.appdata.xml.in.in  com.gitlab.newsflash.desktop.in  com.gitlab.newsflash.desktop.in.in  com.gitlab.newsflash.service.in  meson.build  resources.xml
data/icons/: meson.build
data/resources/article_view/: article.html  style.css
data/resources/css/: app.css  app_dark.css
data/resources/gresource_bundles/: symbolic_icons.gresource
data/resources/ui/: add_dialog.ui  article.ui  article_list.ui  article_list_single.ui  article_view.ui  article_view_progress.ui  article_view_url.ui  discover_dialog.ui  error_detail_dialog.ui  feed.ui  main_window.ui  rename_dialog.ui  service_row.ui  settings.ui  shorcuts_window.ui  sidebar.ui  tag.ui  tag_dialog.ui  theme_chooser.ui
po/: POTFILES  meson.build
resources/article_view/: article.html  style.css  theme_preview.html
resources/css/: app.css  app_dark.css
resources/ui/: #about.ui#  article.ui  article_list.ui  article_list_single.ui  article_view.ui  article_view_progress.ui  article_view_url.ui  category.ui  content_page.ui  content_page_header.ui  error_detail_dialog.ui  feed.ui  feedlist.ui  keybind_editor.ui  login_headerbar.ui  main_window.ui  oauth_login.ui  password_login.glade  password_login.ui  service_row.ui  settings.ui  shorcuts_window.ui  sidebar.ui  sidebar_list.ui  theme_chooser.ui  welcome_headerbar.ui  welcome_page.ui
src/: about_dialog.rs  add_dialog.rs  app.rs  color.rs  config.rs.in  error_bar.rs  error_dialog.rs  gtk_util.rs  i18n.rs  icon_promise.rs  main.rs  main_window.rs  main_window_actions.rs  main_window_state.rs  meson.build  rename_dialog.rs  reset_page.rs  responsive.rs  tag_popover.rs
src/article_list/: article_row.rs  error.rs  mod.rs  single.rs
src/article_list/models/: article.rs  article_update_msg.rs  change_set.rs  error.rs  mark_read_update.rs  mod.rs
src/article_view/: error.rs  mod.rs  progress_overlay.rs  url_overlay.rs
src/article_view/models/: mod.rs
src/color/: error.rs  mod.rs
src/content_page/: content_header.rs  error.rs  header_selection.rs  mod.rs
src/discover/: mod.rs  related_topic_row.rs  search_item_row.rs
src/login_screen/: error.rs  login_headerbar.rs  mod.rs  password_login.rs  web_login.rs
src/settings/: advanced.rs  article_list.rs  article_view.rs  dialog.rs  error.rs  general.rs  keybinding_editor.rs  keybindings.rs  mod.rs  sidebar.rs  theme_chooser.rs
src/sidebar/: error.rs  mod.rs  sidebar_toplevel.rs
src/sidebar/feed_list/: category.rs  category_row.rs  error.rs  feed.rs  feed_list.rs  feed_row.rs  mod.rs  model.rs
src/sidebar/feed_list/models/: category.rs  change_set.rs  dnd_action.rs  error.rs  feed.rs  item.rs  mod.rs  selection.rs  tree.rs
src/sidebar/footer/: mod.rs
src/sidebar/models/: mod.rs  sidebar_iterate_item.rs  sidebar_selection.rs
src/sidebar/tag_list/: error.rs  mod.rs  tag_row.rs
src/sidebar/tag_list/models/: change_set.rs  error.rs  mod.rs  tag.rs
src/tag_popover/: mod.rs  tag_row.rs
src/undo_bar/: mod.rs
src/undo_bar/models/: mod.rs
src/util/: builder_helper.rs  constants.rs  date_util.rs  error.rs  file_util.rs  gtk_util.rs  mod.rs  stopwatch.rs
src/welcome_screen/: mod.rs  service_row.rs  welcome_headerbar.rs  welcome_page.rs
