[package]
name = "news_flash_gtk"
version = "0.1.0"
authors = ["Jan Lukas Gernert <jangernert@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
chrono = "0.4"
rust-embed = { version = "5.2", features = ["debug-embed"] }
failure = "0.1"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
cairo-rs = "0.7"
pango = "0.7"
glib = { version = "0.8", features = ["futures"] }
gdk-pixbuf = { version = "0.7", features = ["v2_36"] }
gtk = { version = "0.7", features = ["v3_24"] }
gio = { version = "0.7", features = ["v2_58"] }
gdk = { version = "0.11", features = ["v3_24"] }
# cairo-rs = "0.7"
# pango = "0.7"
# cairo-rs = "0.8"
# pango = "0.8"
# glib = { version = "0.9" }
# gdk-pixbuf = { version = "0.8", features = ["v2_36"] }
# gtk = { version = "0.8", features = ["v3_24"] }
# gio = { version = "0.8", features = ["v2_58"] }
# gdk = { version = "0.12", features = ["v3_24"] }
libhandy = { version = "0.4", features=["v0_0_10"] }
webkit2gtk = { version = "0.8", features = ["v2_16"] }
log4rs = "0.9"
dirs = "2.0"
parking_lot = "0.10"
color-backtrace = "0.3"
lazy_static = "1.4"
reqwest = "0.10.0-alpha.2"
tokio = "0.2.0-alpha.6"
futures = { version = "0.3", features = ["thread-pool"] }
news-flash = { git = "http://gitlab.com/news-flash/news_flash_base.git", branch = "async" }
