[package]
name = "news_flash_gtk"
version = "0.1.0"
authors = ["Jan Lukas Gernert <jangernert@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
chrono = "0.4"
url = "2.1"
rust-embed = { version = "5.3", features = ["debug-embed"] }
failure = "0.1"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
cairo-rs = { version = "0.8", features = ["v1_16"] }
pango = "0.8"
glib = { version = "0.9" }
gdk-pixbuf = { version = "0.8", features = ["v2_36"] }
gtk = { version = "0.8", features = ["v3_24"] }
gio = { version = "0.8", features = ["v2_58"] }
gdk = { version = "0.12", features = ["v3_24"] }
libhandy = { version = "0.5", features = ["v0_0_10"] }
webkit2gtk = { version = "0.9", features = ["v2_16"] }
log4rs = "0.10"
dirs = "2.0"
parking_lot = "0.10"
color-backtrace = "0.3"
lazy_static = "1.4"
reqwest = { version = "0.10", features = ["json", "native-tls", "socks"] }
tokio = { version = "=0.2", features = ["macros"] }
futures = { version = "0.3", features = ["thread-pool"] }
futures-util = "0.3"
feedly_api = { git = "http://gitlab.com/news-flash/feedly_api.git" }
news-flash = { git = "http://gitlab.com/news-flash/news_flash_base.git" }

