[package]
name = "news_flash_gtk"
version = "0.0.0"
authors = ["Jan Lukas Gernert <jangernert@gmail.com>"]
edition = "2018"

[features]
readability = ["news-flash/readability-fallback"]

[dependencies]
log = "0.4"
chrono = "0.4"
url = "2.1"
rust-embed = { version = "5.5", features = ["debug-embed", "interpolate-folder-path"] }
failure = "0.1"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
cairo-rs = { version = "0.9", features = ["v1_16"] }
pango = "0.9"
glib = { version = "0.10" }
gdk-pixbuf = { version = "0.9", features = ["v2_36"] }
gtk = { version = "0.9", features = ["v3_24"] }
gio = { version = "0.9", features = ["v2_58"] }
gdk = { version = "0.13", features = ["v3_24"] }
libhandy = { version = "0.6", features = ["v0_0_10"] }
webkit2gtk = { version = "0.10", features = ["v2_16"] }
gettext-rs = { version = "0.4", features = ["gettext-system"] }
log4rs = "0.12"
dirs = "3.0"
parking_lot = "0.11"
color-backtrace = "0.4"
lazy_static = "1.4"
reqwest = { version = "0.10", features = ["json", "native-tls", "socks"] }
tokio = { version = "=0.2", features = ["macros"] }
futures = { version = "0.3", features = ["thread-pool"] }
futures-util = "0.3"
num_cpus = "1.13"
regex = "1.3"
feedly_api = "0.3"
news-flash = "1.0"
open = "1.4.0"
