install_data(
    'hicolor/com.gitlab.newsflash.svg',
    rename: '@0@.svg'.format(application_id),
    install_dir: datadir / 'icons' / 'hicolor' / 'scalable' / 'apps'
)
install_data(
    'hicolor/com.gitlab.newsflash-symbolic.svg',
    rename: '@0@-symbolic.svg'.format(application_id),
    install_dir: datadir / 'icons' / 'hicolor' / 'symbolic' / 'apps'
)
